objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AQB_NameFlowSearch__c</fullName>
        <description>AQ_Custom</description>
        <formula>FirstName + " " + IF( ISBLANK(MiddleName) , "" , " " + MiddleName + " " ) + LastName + IF (TEXT(AQB__Suffix__c) &lt;&gt; null, ", " + TEXT( AQB__Suffix__c ), null) + IF(AQB__Deceased__c = true, " - DECEASED", "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Flow Search</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>AQ_Custom</description>
        <formula>AQB__PrimaryEmploymentLink__r.Department__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Linked Primary Employment's Department for this Contact.</inlineHelpText>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>AQ_Custom</description>
        <formula>AQB__PrimaryEmploymentLink__r.Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Linked Primary Employment's Division for this Contact.</inlineHelpText>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <description>AQ_Custom</description>
        <formula>TEXT(AQB__PrimaryEmploymentLink__r.AQB__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Linked Primary Employment's Employment Status for this Contact.</inlineHelpText>
        <label>Employment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <description>AQB Custom</description>
        <label>Ethnicity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>African American</fullName>
                </value>
                <value>
                    <fullName>American Indian</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Foreign</fullName>
                </value>
                <value>
                    <fullName>Malaysian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>White or Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Honors_College__c</fullName>
        <description>AQ_Custom</description>
        <inlineHelpText>Honors College information for this Contact.</inlineHelpText>
        <label>Honors College</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Honors College Graduate</fullName>
                </value>
                <value>
                    <fullName>Honors College Associate</fullName>
                </value>
                <value>
                    <fullName>Honors College General Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>AQ_Custom</description>
        <inlineHelpText>Legacy ID for this Contact.</inlineHelpText>
        <label>Legacy ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <description>AQ_Custom</description>
        <formula>AQB__EducationLink__r.LL_Major_1__r.Name + " " + AQB__EducationLink__r.LL_Major_2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Linked Primary Education's Major for this Contact.</inlineHelpText>
        <label>Major</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Millennium_Id__c</fullName>
        <description>AQB Custom</description>
        <externalId>true</externalId>
        <label>Millennium Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AQB__SecondaryType__c</field>
            <operation>includes</operation>
            <value>Student</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <validationRules>
        <fullName>Communication_Type</fullName>
        <active>true</active>
        <description>Don't allow Account to be created without some type of communication mode (email or phone).</description>
        <errorConditionFormula>AND( ISBLANK( Email  ),  
ISBLANK( Phone ), 
ISBLANK( MailingPostalCode )
)</errorConditionFormula>
        <errorMessage>Please enter at least 1 type of Communication: Home Address, Phone Number, or Email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name</fullName>
        <active>false</active>
        <description>Don't allow Account to be created without First and Last names</description>
        <errorConditionFormula>AND(ISBLANK(FirstName),ISBLANK(LastName))</errorConditionFormula>
        <errorMessage>Please enter a First and Last name to this Contact</errorMessage>
    </validationRules>
</CustomObject>